--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,40 @@
-body {
-  background-color: #000;
-  /* background-image: url('./assets/background.png'); */
-  background-size: auto 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #111111;
-  width: 100%;
-  height: 100vh;
-  margin: 0;
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+
+  margin: 0;
+  padding: 0;
+  font-family:'Josefin Sans Variable', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #ffffff;
+  background: black;
+
+}
+body::-webkit-scrollbar {
+    width: 0px;
+}
+body::-webkit-scrollbar-track {
+    background: transparent;
+}
+body::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+body::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+}
+
+
 h1,
 h2,
 h3,
@@ -20,6 +43,7 @@ h5,
 h6,
 p {
   margin-top: 0;
+  
 }
 a {
   text-decoration: none;
