--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,10 +1,13 @@
-@media screen and (min-width: 780px) {
+@media screen and (min-width: 700px) {
 .container {
     margin: 0 auto;
-    width: 1280px;
-    height: 800px;
+    width: 700px;
+    height: 1100px;
      padding: 0 50px;
     position: relative;
     z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 }
