--- a/src/pages/FirstPage/FirstPage.module.css
+++ b/src/pages/FirstPage/FirstPage.module.css
@@ -8,10 +8,24 @@
     display: flex;
     margin: auto;
     }
+    .header {
+        font-size: 20px;
+         font-family:'Josefin Sans Variable', sans-serif;
+         width: 450px;
+         text-align: center;
+         margin-top: 100px;
+         line-height: 1.5em;
+    }
+    .drewnex {
+        width: 300px;
+        height: auto;
+        margin-top: 100px;
+    }
     .created {
         color: #ffffff;
-        font-size: 18px;
+        font-size: 14px;
         margin-bottom: 0px;
         margin-top: 200px;
+        
     } 
 }
