--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,5 +1,9 @@
 @media screen and (min-width: 700px) {
 .container {
+     background-image: url('./../../assets/images/halloween.jpg');
+  background-size: cover; 
+  background-position: center;
+
     margin: 0 auto;
     width: 700px;
     height: 1100px;
