--- a/src/components/MyDigitalClock/MyDigitalClock.module.css
+++ b/src/components/MyDigitalClock/MyDigitalClock.module.css
@@ -3,8 +3,8 @@
     .watch {
         border-radius: 30px;
         border: 2px solid #ffffff;
-    padding: 30px;
-    font-size: 98px;
+    padding: 20px 30px ;
+    font-size: 158px;
     margin-top: 50px;
     color: #ffffff; /* Text color */
     box-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff,
