--- a/src/pages/FirstPage/FirstPage.module.css
+++ b/src/pages/FirstPage/FirstPage.module.css
@@ -8,6 +8,52 @@
     display: flex;
     margin: auto;
     }
+    @keyframes neonRainbow {
+  0% {
+    box-shadow: 0 0 5px #c800ff, 0 0 10px #c800ff, 0 0 15px #c800ff, 0 0 20px #c800ff, 0 0 25px #c800ff;
+  }
+  20% {
+    box-shadow: 0 0 5px #c800ff, 0 0 10px #c800ff, 0 0 15px #c800ff, 0 0 20px #c800ff, 0 0 25px #c800ff;
+  }
+  40% {
+    box-shadow: 0 0 5px #ff6600, 0 0 10px #ff6600, 0 0 15px #ff6600, 0 0 20px #ff6600, 0 0 25px #ff6600;
+  }
+  60% {
+    box-shadow: 0 0 5px #ffff33, 0 0 10px #ffff33, 0 0 15px #ffff33, 0 0 20px #ffff33, 0 0 25px #ffff33;
+  }
+  80% {
+    box-shadow: 0 0 5px #33ff33, 0 0 10px #33ff33, 0 0 15px #33ff33, 0 0 20px #33ff33, 0 0 25px #33ff33;
+  }
+  100% {
+    box-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff, 0 0 20px #3399ff, 0 0 25px #3399ff;
+  }
+}
+    .container {
+        position: relative;
+        border-radius: 20px;
+       
+    text-align: center;
+        padding: 10px;
+        font-size: 158px;
+        margin-top: 50px;
+        
+    }
+
+
+    .container::before {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: -4px;
+    right: -4px;
+    bottom: -4px;
+    border-radius: 24px;
+    z-index: -1;
+    animation: neonRainbow 6s linear infinite;
+}
+
+
+
     .header {
         font-size: 20px;
          font-family:'Josefin Sans Variable', sans-serif;
@@ -22,10 +68,14 @@
         margin-top: 100px;
     }
     .created {
-        color: #ffffff;
-        font-size: 14px;
+        background: linear-gradient(45deg, #c800ff, #ff4400, #ffff33,#33ff33, #3352ff, #051da2);
+        background-size: 200% 200%;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 24px;
         margin-bottom: 0px;
         margin-top: 150px;
         
     } 
+    
 }
