--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,14 @@ html {
 }
 
 body {
-
+background-size: 200% 200%;
+background-repeat: repeat;
   margin: 0;
   padding: 0;
   font-family:'Josefin Sans Variable', sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #ffffff;
-  background: black;
 
 }
 body::-webkit-scrollbar {
